# django_migralign

./: .gitignore  LICENSE  README.md  pyproject.toml
src/django_migralign/: apps.py
src/django_migralign/management/commands/: helper.py  migralign.py
